graphql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-graphql
spec:
  selector:
    matchLabels:
      app: api-graphql
  replicas: 1
  template:
    metadata:
      labels:
        app: api-graphql
    spec:
      containers:
      - name: api-graphql
        image: sommerfield/api-sound-image:2.0.0
        ports:
        - containerPort: 4000
