rest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rest
spec:
  selector:
    matchLabels:
      app: api-rest
  replicas: 1
  template:
    metadata:
      labels:
        app: api-rest
    spec:
      containers:
      - name: api-rest
        image: sommerfield/api-sound-image
        ports:
        - containerPort: 3000
