soap-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-soap
spec:
  selector:
    matchLabels:
      app: api-soap
  replicas: 1
  template:
    metadata:
      labels:
        app: api-soap
    spec:
      containers:
      - name: api-soap
        image: sommerfield/api-sound-image:2.0.0
        ports:
        - containerPort: 5000
