graphql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-graphql-service
  labels:
    app: api-graphql
spec:
  selector:
    app: api-graphql
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
