rest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-rest-service
  labels:
    app: api-rest
spec:
  selector:
    app: api-rest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
