soap-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-soap-service
  labels:
    app: api-soap
spec:
  selector:
    app: api-soap
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
