app-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /rest
        backend:
          serviceName: api-rest-service
          servicePort: 3000
      - path: /graphql
        backend:
          serviceName: api-graphql-service
          servicePort: 4000
      - path: /soap
        backend:
          serviceName: api-soap-service
          servicePort: 5000
